--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -47,10 +47,12 @@
     }
   </style>
   <body>
-    <h1>Todo List</h1>
-    <div class="task-list">
-      <todo-list></todo-list>
-    </div>
+    <main>
+      <h1>Todo List</h1>
+      <div class="task-list">
+        <todo-list></todo-list>
+      </div>
+    </main>
 
     <script attr="defer" src="src/custom-elements.js"></script>
   </body>
